# LLM_development_learning

./: .gitignore  README.md
Agent_skills_demo/demo1/: langgraph.json  main.py  requirements.txt
LLM_demo/: 01_LLM.ipynb  02_LLM_local_ollama.ipynb  03_LangChain关键对象.ipynb  04_LangChain记忆系统.ipynb  05_LangChain文本嵌入.ipynb  06_LangChain工具封装与调用.ipynb  requirements.txt  test.ipynb  政策文件.txt
LangChain/: langgraph.json  pyproject.toml  readme.md  requirements.txt  test.ipynb  test.sql
LangChain/.langgraph_api/: .langgraph_ops.pckl
LangChain/src/: app.py
LangChain/src/agent/: my_agent1.py  my_agent2.py  my_agent3.py  text_to_sql_agent.py
LangChain/src/agent/tools/: fake_mcp_server.py  text_to_sql_tools.py  tool_demo1.py  tool_demo2.py  tool_mcp.py
LangChain/src/agent/utils/: db_utils.py  log_utils.py
LangChain/templates/: chat.html
LangGraph/project1/: content_review.db-shm  content_review.db-wal  langgrapg01-入门和组件.ipynb  langgraph02-构筑有记忆能恢复的智能体.ipynb  langgraph03-人机协作.ipynb  langgraph04-多智能体系统.ipynb  personal_assistant.db-shm  personal_assistant.db-wal  pipeline.db  requirements.txt
LangGraph/project2/: .gitignore
RAG_demo/: deepseek_faiss_搭建本地知识库检索.ipynb  deepseek_faisss_搭建本地知识库检索.ipynb  deepseek_faisss_搭建本地知识库检索.py  qwen-agent-multi-files.ipynb  requirements.txt  vector_embedding_and_similarity.ipynb  文档切割.ipynb
RAG_demo/Internet_docs/: Lecture 1 Overview.ipynb  Lecture 15 CRAG.ipynb  (+12 more)
llm-developing-assistantgpt/: AssistantGPT.py  README.md  app.py  config.py  db_qdrant.py  file_processor_helper.py  requirements.txt  utils.py
test-project/: index.html
(+58 files in other folders)
