[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.0.1"
description = "An excellent agent build for LangSmith."
authors = [
    {name = "agent", email = "1466926982@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]